--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.4.6",
+    "storybook-dark-mode": "^3.0.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
