--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "files": [
     "build"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hobbescodes/tigris-ui"
+  },
   "exports": {
     ".": {
       "require": "./build/ui.js",
