--- a/.github/release.yml
+++ b/.github/release.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: "18.x"
       - name: Install dependencies
-        run: yarn
+        run: bun install
       - name: Create release PR or publish package
         id: changesets
         uses: changesets/action@v1
