--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hobbescodes/tigris-ui",
   "version": "0.0.0",
-  "description": "a reusable design system and composible library",
+  "description": "a reusable design system and composible component library",
   "author": "hobbescodes",
   "license": "MIT",
   "main": "build/ui.js",
