--- a/package.json
+++ b/package.json
@@ -39,11 +39,16 @@
   "trustedDependencies": [
     "@pandacss/dev"
   ],
+  "resolutions": {
+    "@zag-js/store": "^0.24.0"
+  },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@ark-ui/anatomy": "^0.1.0",
+    "@ark-ui/react": "^0.15.0",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@omnidev/knit": "^0.1.2",
