--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "storybook": "^7.4.6",
     "storybook-dark-mode": "^3.0.1",
     "tsup": "^7.2.0",
