--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,20 +11,17 @@ jobs:
     name: Handle release 🦋
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
+          node-version: 20
       - name: Install dependencies
-        run: bun install
+        run: bun i
       - name: Create release PR or publish package
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: bun run release
+          publish: bun release
           title: "feature(release): version packages"
           commit: "ci(changesets): version packages"
         env:
