--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -16,9 +19,20 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "typeRoots": ["generated/panda", "node_modules/@types"],
-    "outDir": "build"
+    "typeRoots": [
+      "generated/panda"
+    ]
   },
-  "include": ["src", "*.config.ts", "*.config.cjs", ".storybook/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src",
+    "*.config.ts",
+    "*.config.cjs",
+    ".storybook/**/*.ts",
+    ".storybook/**/*.tsx",
+    "test-runner-jest.config.js"
+  ],
+  "exclude": [
+    "**/node_modules",
+    "src/generated"
+  ]
 }
