Revert "build: update dev script"
This reverts commit 2d3f95d0d1159b40b36a0d6167bf36643416711d.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "dev": "dotenv -e .env -c -- panda codegen && concurrently --kill-others -n \"PANDA,STORYBOOK\" -c \"#f13334,#ff4785\" \"bun dev:css\" \"bun storybook\"",
+    "dev": "panda codegen && concurrently --kill-others -n \"PANDA,STORYBOOK\" -c \"#f13334,#ff4785\" \"bun dev:css\" \"bun storybook\"",
     "dev:css": "panda --watch",
     "build": "panda codegen && tsup",
     "format": "prettier . --write",
