--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "bun"
   ],
   "scripts": {
-    "prepare": "panda codegen && husky install",
-    "dev": "concurrently --kill-others -n \"BUILD,STORYBOOK\" -c \"#f13334,#ff4785\" \"bun run build --watch\" \"bun storybook\"",
+    "prepare": "husky install",
+    "dev": "panda codegen && concurrently --kill-others -n \"PANDA,STORYBOOK\" -c \"#ffc83d,#ff4785\" \"bun dev:css\" \"bun storybook\"",
+    "dev:css": "panda --watch",
     "build": "panda codegen && tsup",
     "format": "prettier . --write",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
