--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@commitlint/config-conventional": "^18.1.0",
     "@commitlint/types": "^18.1.0",
     "@omnidev/knit": "^0.1.2",
-    "@pandacss/dev": "^0.16.0",
+    "@pandacss/dev": "^0.17.3",
+    "@pandacss/types": "^0.17.3",
     "@storybook/addon-a11y": "^7.4.6",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-interactions": "^7.4.6",
