--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "format": "prettier . --write",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "test-storybook",
+    "test:coverage": "bun run test --coverage",
+    "test:ci": "concurrently --kill-others -s first -n \"STORYBOOK,TEST\" -c \"#ff4785,#45ba4b\" \"http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && bun test:coverage --ci\"",
+    "test:watch": "bun run test --watch",
     "storybook": "storybook dev --quiet --no-open -p 6006",
     "storybook:build": "panda codegen && storybook build",
     "release": "bun run build && changeset publish"
@@ -59,6 +62,7 @@
     "@pandacss/dev": "^0.17.3",
     "@pandacss/types": "^0.17.3",
     "@storybook/addon-a11y": "^7.4.6",
+    "@storybook/addon-coverage": "^0.0.9",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-interactions": "^7.4.6",
     "@storybook/addon-links": "^7.4.6",
@@ -88,6 +92,7 @@
     "eslint-plugin-testing-library": "^6.1.0",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "react": "^18.2.0",
