--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wait-on": "^7.0.1"
   }
 }
