chore: add additional keywords to package.json

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "./index.css": "./build/ui.css"
   },
   "keywords": [
-    "bun"
+    "bun",
+    "panda",
+    "ark"
   ],
   "scripts": {
     "prepare": "husky install",
