--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-testing-library": "^6.1.0",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "framer-motion": "^10.16.4",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
